Bug 812899 part 2.  Change the centering code in nsImageDocument to only try vertically centering via auto margins when we're not overflowing in the vertical direction, because if we _are_ overflowing that should cut off part of the image per spec.  r=khuey
UltraBlame original commit: 994cd45fade9bb249a7f622a0eccaa10b5cbe01d

--- a/layout/style/TopLevelImageDocument.css
+++ b/layout/style/TopLevelImageDocument.css
@@ -42,6 +42,17 @@ left
 0
 ;
 }
+img
+.
+overflowingVertical
+{
+margin
+-
+top
+:
+0
+;
+}
 .
 completeRotation
 {
